src/test/deca/context/invalid/classmethode6.deca
class A{
    float a;
    void methode(){
        return a;
    }
}

{
    A a=new A();
    
}